# zslbox

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.circleci  Gopkg.toml  README.md  gencert.sh  main.go  pre-commit  server.go
.circleci/: config.yml
snark/: snark_darwin.go  snark_linux.go  snark_windows.go
snark/libsnark/libzsl/: CMakeLists.txt  gadgets.cpp  zsl.cpp  zsl.h
zsl/: client.go  client_test.go  helpers.go  tree.go  tree_test.go  types.go  zslbox.pb.go  zslbox.proto
zsl/gopherjs/: zslbox.pb.gopherjs
